# foundry

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  release-please-config.json
.claude-plugin/: marketplace.json
.codex-plugin/: marketplace.json
.foundry/: manifest.json
docs/: BACKLOG.md  README.md  ROADMAP.md  coe-template.md  glossary.md  index.md  validation.md
evals/fixtures/python-service/repo/: .gitignore  pyproject.toml
evals/fixtures/python-service/repo/src/catalog/: main.py
evals/fixtures/python-service/repo/tests/: test_api.py
knowledge/: README.md  coe-template.md  docs-config.json  glossary.md  index.md  knowledge-config.json  log.md  package-lock.json  package.json  releasing.md  review-convergence-coe.md  validation.md
roadmap/: BACKLOG.md  ROADMAP.md
rules/: knowledge-conventions.md
scripts/: board.sh  check-board.py  check-byte-identity.sh  check-context-budget.sh  check-fast.sh  check-gate-tools.sh  check-manifest-parity.sh  check-skill-references.sh  docs.py  install-hooks.sh  knowledge.py  prose-lint.py  test_docs.py  test_knowledge.py  test_prose_lint.py  worktree-retire.sh
specs/: README.md
tests/: append_only_store_test.sh  bootstrap_expectations_test.sh  byte_identity_test.sh  check_gate_tools_test.sh  code_review_cycle_test.sh  code_review_eval_test.sh  code_review_footer_algebra_test.sh  code_review_recompute_test.sh  code_review_refuter_family_test.sh  code_review_skill_test.sh  context_budget_test.sh  cross_family_review_test.sh  done_merged_docs_test.sh  eval_sandbox_test.sh  fresh_session_deliverables_test.sh  (+52 more)
(+355 files in other folders)
