[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "catalog"
version = "0.1.0"
description = "A product-catalog HTTP service: serves Product records as JSON."
requires-python = ">=3.10"
dependencies = ["fastapi", "uvicorn"]

[project.optional-dependencies]
dev = ["pytest", "httpx", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]
